<resources>
    <string name="app_name">ROS E-Stop</string>

    <string name="use_master">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="qr_code">Read QRCode</string>
    <string name="master_uri_hint">http://localhost:11311/</string>
    <string name="use_default_master">Use Default Master Chooser</string>
    <string name="new_private_master">New Private Master</string>
    <string name="show_advanced">Show advanced options</string>
    <string name="select_interface">Select network interface</string>
    <string name="uri_text">Master URI:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
